package graalvm dependencies (#287)