@@ -76,7 +76,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<staging.dir>${project.build.directory}/staging</staging.dir>
 		<jmockit-version>1.7</jmockit-version>
-		<compiler.dir>${project.build.directory}/compiler</compiler.dir>
+		<compiler.dir>${project.build.directory}/lib-compiler</compiler.dir>
 	</properties>
 
 	<build>
@@ -123,7 +123,6 @@
 									<version>${graalvm.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
-									<destFileName>compiler.jar</destFileName>
 								</artifactItem>
 								<artifactItem>
 									<groupId>org.graalvm.compiler</groupId>
@@ -131,7 +130,6 @@
 									<version>${graalvm.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
-									<destFileName>compiler-management.jar</destFileName>
 								</artifactItem>
 								<artifactItem>
 									<groupId>org.graalvm.truffle</groupId>
@@ -139,7 +137,6 @@
 									<version>${graalvm.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
-									<destFileName>truffle-api.jar</destFileName>
 								</artifactItem>
 								<artifactItem>
 									<groupId>org.graalvm.sdk</groupId>
@@ -147,7 +144,6 @@
 									<version>${graalvm.version}</version>
 									<type>jar</type>
 									<overWrite>true</overWrite>
-									<destFileName>graal-sdk.jar</destFileName>
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${compiler.dir}</outputDirectory>
@@ -468,9 +464,9 @@
 				<jdk>[11,21)</jdk>
 			</activation>
 			<properties>
-				<module.opts>--illegal-access=permit --add-reads java.base=java.logging</module.opts>
+				<module.opts>--add-reads java.base=java.logging</module.opts>
 				<!-- GraalVM compiler embedded in jvm -->
-				<graalvm.opts>-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --module-path=${compiler.dir} --upgrade-module-path=${compiler.dir}/compiler.jar${path.separator}${compiler.dir}/compiler-management.jar</graalvm.opts>
+				<graalvm.opts>-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --module-path=${compiler.dir} --upgrade-module-path=${compiler.dir}/compiler-${graalvm.version}.jar${path.separator}${compiler.dir}/compiler-management-${graalvm.version}.jar</graalvm.opts>
 				<graalvm.version>22.3.5</graalvm.version>
 			</properties>
 			<dependencies>
@@ -496,26 +492,6 @@
 					<artifactId>chromeinspector</artifactId>
 					<version>${graalvm.version}</version>
 					<scope>runtime</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.compiler</groupId>
-					<artifactId>compiler</artifactId>
-					<version>${graalvm.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.compiler</groupId>
-					<artifactId>compiler-management</artifactId>
-					<version>${graalvm.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.truffle</groupId>
-					<artifactId>truffle-api</artifactId>
-					<version>${graalvm.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.sdk</groupId>
-					<artifactId>graal-sdk</artifactId>
-					<version>${graalvm.version}</version>
 				</dependency>
 				<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
 				<dependency>
@@ -550,7 +526,7 @@
 			<properties>
 				<module.opts>--add-reads java.base=java.logging</module.opts>
 				<!-- GraalVM compiler embedded in jvm -->
-				<graalvm.opts>-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --module-path=${compiler.dir} --upgrade-module-path=${compiler.dir}/compiler.jar${path.separator}${compiler.dir}/compiler-management.jar</graalvm.opts>
+				<graalvm.opts>-XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI --module-path=${compiler.dir} --upgrade-module-path=${compiler.dir}/compiler-${graalvm.version}.jar${path.separator}${compiler.dir}/compiler-management-${graalvm.version}.jar</graalvm.opts>
 				<graalvm.version>23.1.6</graalvm.version>
 			</properties>
 			<dependencies>
@@ -585,38 +561,6 @@
 					<version>${graalvm.version}</version>
 					<type>pom</type>
 					<scope>runtime</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.truffle</groupId>
-					<artifactId>truffle-compiler</artifactId>
-					<version>${graalvm.version}</version>
-					<scope>runtime</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.truffle</groupId>
-					<artifactId>truffle-runtime</artifactId>
-					<version>${graalvm.version}</version>
-					<scope>runtime</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.compiler</groupId>
-					<artifactId>compiler</artifactId>
-					<version>${graalvm.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.compiler</groupId>
-					<artifactId>compiler-management</artifactId>
-					<version>${graalvm.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.truffle</groupId>
-					<artifactId>truffle-api</artifactId>
-					<version>${graalvm.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.graalvm.sdk</groupId>
-					<artifactId>graal-sdk</artifactId>
-					<version>${graalvm.version}</version>
 				</dependency>
 				<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
 				<dependency>
@@ -660,14 +604,12 @@
 											<artifactId>collections</artifactId>
 											<version>${graalvm.version}</version>
 											<type>jar</type>
-											<destFileName>collections.jar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>org.graalvm.sdk</groupId>
 											<artifactId>word</artifactId>
 											<version>${graalvm.version}</version>
 											<type>jar</type>
-											<destFileName>word.jar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>org.graalvm.truffle</groupId>
@@ -681,7 +623,6 @@
 											<artifactId>truffle-compiler</artifactId>
 											<version>${graalvm.version}</version>
 											<type>jar</type>
-											<destFileName>truffle-compiler.jar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>org.graalvm.compiler</groupId>
@@ -689,7 +630,6 @@
 											<version>${graalvm.version}</version>
 											<type>jar</type>
 											<overWrite>true</overWrite>
-											<destFileName>compiler.jar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>org.graalvm.compiler</groupId>
@@ -697,7 +637,6 @@
 											<version>${graalvm.version}</version>
 											<type>jar</type>
 											<overWrite>true</overWrite>
-											<destFileName>compiler-management.jar</destFileName>
 										</artifactItem>
 										<artifactItem>
 											<groupId>org.graalvm.polyglot</groupId>
